LAB-INFLUXDB-K8S/ingress/01-ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: influxdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: influxdb
      port:
        number: 8086
  #rules:
  #  - http:
  #      paths:
  #        - path: /
  #          pathType: Prefix
  #          backend:
  #            service:
  #              name: influxdb
  #              port:
  #                number: 8086
  #        - path: /foo
  #          pathType: Exact
  #          backend:
  #            service:
  #              name: nginx-svc
  #              port:
  #                number: 8080
  #        - path: /bar
  #          pathType: Exact
  #          backend:
  #            service:
  #              name: nginx-svc
  #              port:
  #                number: 8080
